--- a/src/app/layout/material/material-add/material-add.component.html
+++ b/src/app/layout/material/material-add/material-add.component.html
@@ -110,43 +110,43 @@
                                         <div class="form-group col-md-12" formArrayName="material_tax" *ngFor="let material_taxs of getMateriaTax(form); let i = index;">
                                             <div class="row" [formGroupName]="i">
                                                 <div class="form-group col-md-3">
-                                                    <label>IGST</label>
+                                                    <label><span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> IGST</label>
                                                     <input class="form-control" type="number" formControlName="igst" placeholder="IGST" [ngClass]="{
                                                 'is-invalid':material_taxs.get('igst').invalid && (material_taxs.get('igst').dirty || material_taxs.get('igst').touched),
                                                 'is-valid': material_taxs.get('igst').valid && (fmaterial_taxs.get('igst').dirty || material_taxs.get('igst').touched)
                                               }">
                                                     <div class="invalid-feedback" *ngIf="material_taxs.get('igst').hasError('required')">
-                                                        Please enter IGST
+                                                        Please enter <span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> IGST
                                                     </div>
                                                 </div>
                                                 <div class="form-group col-md-3">
-                                                    <label>CGST</label>
+                                                    <label><span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> CGST</label>
                                                     <input class="form-control" type="number" formControlName="cgst" placeholder="CGST" [ngClass]="{
                                                 'is-invalid': material_taxs.get('cgst').invalid && (material_taxs.get('cgst').dirty || material_taxs.get('cgst').touched),
                                                 'is-valid': material_taxs.get('cgst').valid && (material_taxs.get('cgst').dirty || material_taxs.get('cgst').touched)
                                               }">
                                                     <div class="invalid-feedback" *ngIf="material_taxs.get('cgst').hasError('required')">
-                                                        Please enter CGST
+                                                        Please enter <span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> CGST
                                                     </div>
                                                 </div>
                                                 <div class="form-group col-md-3">
-                                                    <label>SGST</label>
+                                                    <label><span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> SGST</label>
                                                     <input class="form-control" type="number" formControlName="sgst" placeholder="SGST" [ngClass]="{
                                                 'is-invalid': material_taxs.get('sgst').invalid && (material_taxs.get('sgst').dirty || material_taxs.get('sgst').touched),
                                                 'is-valid': material_taxs.get('sgst').valid && (material_taxs.get('sgst').dirty || material_taxs.get('sgst').touched)
                                               }">
                                                     <div class="invalid-feedback" *ngIf="material_taxs.get('sgst').hasError('required')">
-                                                        Please enter SGST
+                                                        Please enter <span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> SGST
                                                     </div>
                                                 </div>
                                                 <div class="form-group col-md-3">
-                                                    <label>HSN</label>
+                                                    <label><span *ngIf="i==0">Purchase</span><span *ngIf="i==1">Sales</span> HSN</label>
                                                     <input class="form-control" type="number" formControlName="hsn" placeholder="HSN" [ngClass]="{
                                                 'is-invalid': material_taxs.get('hsn').invalid && (material_taxs.get('hsn').dirty || material_taxs.get('hsn').touched),
                                                 'is-valid': material_taxs.get('hsn').valid && (material_taxs.get('hsn').dirty || material_taxs.get('hsn').touched)
                                               }">
                                                     <div class="invalid-feedback" *ngIf="material_taxs.get('hsn').hasError('required')">
-                                                        Please enter HSN
+                                                        Please enter <span *ngIf="i==0">Purchase</span><span *ngIf="i==0">Sales</span> HSN
                                                     </div>
                                                 </div>
                                             </div>
