--- a/src/app/layout/material/material.component.html
+++ b/src/app/layout/material/material.component.html
@@ -58,7 +58,7 @@
                   <td><span *ngIf="material.is_taxable==true">{{material.material_tax[0]['igst']}} - {{material.material_tax[0]['cgst']}} - {{material.material_tax[0]['sgst']}} - {{material.material_tax[0]['hsn']}}</span></td>
                   <td><span *ngIf="material.is_sales==true && material.is_taxable==true">{{material.material_tax[1]['igst']}} - {{material.material_tax[1]['cgst']}} - {{material.material_tax[1]['sgst']}} - {{material.material_tax[1]['hsn']}}</span></td>
                   <td>
-                    <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/material/edit', material.id]"><i class="fa fa-eye"></i></a>&nbsp;&nbsp;&nbsp;
+                    <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/material/edit', material.id]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
                     <a href="javascript:void(0);" title="Map" name="Map" (click)="deleteMaterial(material.id)">
                         <i class="fa fa-trash-o"></i>
                       </a>
