--- a/src/app/layout/material/material.component.html
+++ b/src/app/layout/material/material.component.html
@@ -64,6 +64,9 @@
                       </a>
                   </td>
               </tr>
+              <tr *ngIf="materialList.length == 0">
+                <td colspan="8" class="text-center">No record found</td>
+              </tr>
           </tbody>
       </table>
     </div>
